Completed lots of bug fixes - added resizeText() function to dynamically make the text smaller, depending on how large it is, automatically changes back (to its former size) when deleting too - fixed bug where pressing the clear button wouldn't reset the font size - fixed bug, where diving through 0 would always return 0 --> due to adding checkSnarkyMessage() function that replaces the snarky message Nope with an empty string - changed display text alignment, so that it is on the right - changed display height and width to disallow text-overflow

--- a/project-calculator/calc.css
+++ b/project-calculator/calc.css
@@ -36,16 +36,19 @@ main {
 
 .inputDiv {
     display: flex;
-    justify-content: center;
-    align-items: center;  
+    justify-content: flex-end;
+    align-items: center;
     background-color: #262628;
+    height: 75px;
+    max-width: 300px;
+    overflow: hidden;
+    white-space: nowrap;
 }
 #inputField {
-    height: 75px;
-    width: 100%;
-    text-align: right;
     font-family: 'Digital-7 Mono', sans-serif;
-    font-size: 28px;
+    font-size: 42px;
+    font-weight: lighter;
+    margin-right: 8px;
 }
 
 
